--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^6.1.0",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^2.4.3",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "zod": "^3.24.1",
@@ -36,6 +37,7 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "eslint": "^8.57.1",
     "prisma": "^6.1.0",
     "source-map-support": "^0.5.21",
